--- a/NewsDailyMVP/Classes/News/News.storyboard
+++ b/NewsDailyMVP/Classes/News/News.storyboard
@@ -118,23 +118,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kvf-Dg-DlK">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <items>
-                                    <navigationItem id="hdo-Mu-gNG">
-                                        <barButtonItem key="leftBarButtonItem" image="dismiss" id="Tds-u9-PQ0">
-                                            <connections>
-                                                <action selector="backButtonPressed:" destination="yRH-9F-2wD" id="EMK-bm-agp"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" image="like" id="GjV-Tq-IF8">
-                                            <connections>
-                                                <action selector="saveArticleInMyFavoriteNews:" destination="yRH-9F-2wD" id="GUa-QA-7wT"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ebV-AS-9PO">
                                 <rect key="frame" x="32.5" y="84" width="310" height="180"/>
                                 <constraints>
@@ -168,7 +151,7 @@
                                     <constraint firstAttribute="height" constant="48" id="ZDG-mU-tuN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="21"/>
-                                <state key="normal" title="open in browser">
+                                <state key="normal" title="Open in Browser">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -176,6 +159,7 @@
                                         <integer key="value" value="12"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.clipsToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="l10nTitle" value="openInBrowser"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="openInBrowser:" destination="yRH-9F-2wD" eventType="touchUpInside" id="jIQ-yU-C8b"/>
@@ -185,7 +169,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7ww-kd-7PZ" firstAttribute="top" secondItem="ebV-AS-9PO" secondAttribute="bottom" constant="20" id="4mH-sh-uLX"/>
-                            <constraint firstItem="kvf-Dg-DlK" firstAttribute="top" secondItem="reN-pB-jux" secondAttribute="top" id="5lk-er-AxX"/>
+                            <constraint firstItem="ebV-AS-9PO" firstAttribute="top" secondItem="reN-pB-jux" secondAttribute="top" constant="64" id="6uq-4y-VGV"/>
                             <constraint firstItem="Fal-2D-v5K" firstAttribute="top" secondItem="dEN-AK-jbY" secondAttribute="bottom" constant="20" id="B9R-wW-R7A"/>
                             <constraint firstItem="ebV-AS-9PO" firstAttribute="centerX" secondItem="pRr-ll-Qcx" secondAttribute="centerX" id="LL9-Xh-6Yn"/>
                             <constraint firstItem="reN-pB-jux" firstAttribute="trailing" secondItem="7ww-kd-7PZ" secondAttribute="trailing" constant="30" id="LRQ-L3-kfn"/>
@@ -193,17 +177,13 @@
                             <constraint firstItem="reN-pB-jux" firstAttribute="trailing" secondItem="dEN-AK-jbY" secondAttribute="trailing" constant="30" id="XAt-SG-kZJ"/>
                             <constraint firstItem="dEN-AK-jbY" firstAttribute="top" secondItem="7ww-kd-7PZ" secondAttribute="bottom" constant="10" id="eNl-8J-8It"/>
                             <constraint firstItem="7ww-kd-7PZ" firstAttribute="leading" secondItem="reN-pB-jux" secondAttribute="leading" constant="30" id="gtd-Or-k8q"/>
-                            <constraint firstItem="ebV-AS-9PO" firstAttribute="top" secondItem="kvf-Dg-DlK" secondAttribute="bottom" constant="20" id="iPy-ZD-EhM"/>
                             <constraint firstItem="Fal-2D-v5K" firstAttribute="centerX" secondItem="pRr-ll-Qcx" secondAttribute="centerX" id="ijU-Lp-hop"/>
-                            <constraint firstItem="kvf-Dg-DlK" firstAttribute="centerX" secondItem="ebV-AS-9PO" secondAttribute="centerX" id="kxw-IN-kge"/>
-                            <constraint firstItem="kvf-Dg-DlK" firstAttribute="leading" secondItem="pRr-ll-Qcx" secondAttribute="leading" id="uDQ-th-nKl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="reN-pB-jux"/>
                     </view>
                     <connections>
                         <outlet property="articleImage" destination="ebV-AS-9PO" id="ncL-Su-yKV"/>
                         <outlet property="contentLabel" destination="dEN-AK-jbY" id="MCB-dj-UJh"/>
-                        <outlet property="likeArticleButton" destination="GjV-Tq-IF8" id="UVf-Hh-AuC"/>
                         <outlet property="openInBrowserButton" destination="Fal-2D-v5K" id="dp9-IR-2xF"/>
                         <outlet property="titleLabel" destination="7ww-kd-7PZ" id="fih-k1-5JG"/>
                     </connections>
@@ -235,8 +215,6 @@
     </scenes>
     <resources>
         <image name="Home" width="35" height="35"/>
-        <image name="dismiss" width="10" height="16"/>
-        <image name="like" width="24" height="24"/>
         <image name="menu" width="30" height="23"/>
     </resources>
 </document>
